exports[`Functional tests mutation create 1`] = `
Object {
  "data": Object {
    "createPost": Object {
      "post": Object {
        "animals": Object {
          "edges": Array [
            Object {
              "node": Object {
                "Weight": 1008.1,
                "age": 1008,
                "birthday": "Wed, 07 Dec 2016 10:42:48 GMT",
                "id": "QW5pbWFsOjg=",
                "isCat": true,
                "name": "animal1",
              },
            },
            Object {
              "node": Object {
                "Weight": 1009.1,
                "age": 1009,
                "birthday": "Wed, 10 Nov 2100 17:00:00 GMT",
                "id": "QW5pbWFsOjk=",
                "isCat": false,
                "name": "animal2",
              },
            },
          ],
        },
        "owner": Object {
          "name": "user5",
          "pets": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "Weight": 1007.1,
                  "age": 1007,
                  "birthday": "Wed, 10 Nov 2100 17:00:00 GMT",
                  "id": "QW5pbWFsOjc=",
                  "isCat": false,
                  "name": "pet1",
                },
              },
            ],
          },
        },
      },
    },
  },
}
`;

exports[`Functional tests node 1`] = `
Object {
  "data": Object {
    "node": Object {
      "name": "Rex",
    },
  },
}
`;

exports[`Functional tests query connection 1`] = `
Object {
  "data": Object {
    "viewer": Object {
      "animals": Object {
        "edges": Array [
          Object {
            "node": Object {
              "name": "Rex",
            },
          },
          Object {
            "node": Object {
              "name": "Felix",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`Functional tests query one: animal 1`] = `
Object {
  "data": Object {
    "viewer": Object {
      "animal": Object {
        "Weight": 10.1,
        "age": 6,
        "birthday": "Wed, 10 Nov 2010 17:00:00 GMT",
        "id": "QW5pbWFsOjE=",
        "isCat": false,
        "name": "Rex",
      },
    },
  },
}
`;

exports[`Functional tests query one: post 1`] = `
Object {
  "data": Object {
    "viewer": Object {
      "post": Object {
        "animals": Object {
          "edges": Array [
            Object {
              "node": Object {
                "Weight": 10.1,
                "age": 6,
                "birthday": "Wed, 10 Nov 2010 17:00:00 GMT",
                "id": "QW5pbWFsOjE=",
                "isCat": false,
                "name": "Rex",
              },
            },
            Object {
              "node": Object {
                "Weight": 13.1,
                "age": 3,
                "birthday": "Thu, 28 Feb 2013 17:00:00 GMT",
                "id": "QW5pbWFsOjI=",
                "isCat": false,
                "name": "Felix",
              },
            },
            Object {
              "node": Object {
                "Weight": 2.1,
                "age": 8,
                "birthday": "Mon, 05 May 2008 17:00:00 GMT",
                "id": "QW5pbWFsOjM=",
                "isCat": false,
                "name": "Jeck",
              },
            },
          ],
        },
        "owner": Object {
          "name": "John",
          "pets": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "Weight": 13.1,
                  "age": 3,
                  "birthday": "Thu, 28 Feb 2013 17:00:00 GMT",
                  "id": "QW5pbWFsOjI=",
                  "isCat": false,
                  "name": "Felix",
                },
              },
              Object {
                "node": Object {
                  "Weight": 2.1,
                  "age": 8,
                  "birthday": "Mon, 05 May 2008 17:00:00 GMT",
                  "id": "QW5pbWFsOjM=",
                  "isCat": false,
                  "name": "Jeck",
                },
              },
              Object {
                "node": Object {
                  "Weight": 12.1,
                  "age": 7,
                  "birthday": "Fri, 11 Dec 2009 17:00:00 GMT",
                  "id": "QW5pbWFsOjQ=",
                  "isCat": false,
                  "name": "Morph",
                },
              },
            ],
          },
        },
      },
    },
  },
}
`;

exports[`Functional tests subscribe connection 1`] = `
Object {
  "data": Object {
    "viewer": Object {
      "animals": Object {
        "edges": Array [
          Object {
            "node": Object {
              "name": "Felix",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`Functional tests subscribe connection 2`] = `
Array [
  Array [
    "123",
    "animal",
    "QW5pbWFsOjE=",
    Object {
      "Weight": 10.1,
      "age": 6,
      "birthday": 2010-11-10T17:00:00.000Z,
      "id": 1,
      "isCat": false,
      "name": "testn",
    },
    Object {
      "subscriptionId": "123",
    },
  ],
]
`;

exports[`Functional tests subscribe connection 3`] = `Array []`;

exports[`Functional tests subscribe connection 4`] = `Array []`;

exports[`Functional tests subscribe one 1`] = `
Object {
  "data": Object {
    "viewer": Object {
      "animal": Object {
        "name": "Rex",
      },
    },
  },
}
`;

exports[`Functional tests subscribe one 2`] = `
Array [
  Array [
    "123",
    "animal",
    "QW5pbWFsOjE=",
    Object {
      "Weight": 10.1,
      "age": 6,
      "birthday": 2010-11-10T17:00:00.000Z,
      "id": 1,
      "isCat": false,
      "name": "testn",
    },
    Object {
      "subscriptionId": "123",
    },
  ],
]
`;

exports[`Functional tests update mutation: animal 1`] = `
Object {
  "data": Object {
    "updateAnimal": Object {
      "animal": Object {
        "birthday": "Wed, 07 Dec 2016 10:42:48 GMT",
        "name": "testName1",
      },
    },
  },
}
`;
